# satysfi-slack-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dune-project  run_bot.sh  satysfi-slack-bot.opam
docs/: docker.md
lib/: bot.ml  code_block.ml  command.ml  config.ml  diagnostics.ml  dune  http_server.ml  log.ml  process.ml  renderer.ml  sha256.ml  slack_client.ml  slack_event.ml  slack_request.ml
test/: dune  test_core.ml  test_diagnostic.ml  test_renderer.ml
